# settings-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  gulpfile.js  package-lock.json
.github/workflows/: release-my-settings-ui.yaml  release-settings-service.yaml  release.yml
Typescript/: Actions.ts  Dialog.ts  HtmlMain.ts  contracts.d.ts  main.ts
Typescript/dialogs/: ConfirmDeleteSecret.ts  ConfirmDeleteTemplate.ts  EditSecret.ts  EditTemplate.ts  ShowSecretUsage.ts  ShowUsageSecretOfSecrets.ts  ShowYamlDialog.ts
Typescript/typings/: dialog.d.ts
my-settings-ui/: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  UPDATE.mdc  build.rs
my-settings-ui/proto/: SecretsService.proto
my-settings-ui/public/assets/: app.css  app.js
my-settings-ui/src/: main.rs  ui_utils.rs  utils.rs
my-settings-ui/src/api/: envs.rs  mod.rs  products.rs  secrets.rs  templates.rs
my-settings-ui/src/components/: mod.rs  select_product.rs
my-settings-ui/src/dialogs/: confirmation_dialog.rs  copy_to_env.rs  delete_secret.rs  delete_template.rs  dialog_state.rs  dialog_template.rs  mod.rs  render.rs  show_populated_yaml.rs  show_secret.rs  show_secret_usage_by_secret.rs  show_secret_usage_by_template.rs  snapshot_to_export.rs  snapshot_to_import.rs
my-settings-ui/src/dialogs/edit_cf_a_record/: edit_cf_a_record.rs  mod.rs
my-settings-ui/src/dialogs/edit_domain_mask/: edit_domain_mask.rs  mod.rs  state.rs
my-settings-ui/src/dialogs/edit_domain_product/: edit_domain_product.rs  mod.rs  state.rs
my-settings-ui/src/dialogs/edit_secret/: render.rs  state.rs
my-settings-ui/src/dialogs/edit_template/: choose_secret.rs  edit_template.rs  mod.rs  peek_secrets.rs  select_secret.rs  states.rs
my-settings-ui/src/dialogs/sync_nginx/: mod.rs  sync_nginx.rs
my-settings-ui/src/icons/: icons.rs  mod.rs  render_enabled_disabled.rs
my-settings-ui/src/models/: download_templates.rs  envs.rs  mod.rs  secret_http_model.rs  secrets.rs  template_http_model.rs
my-settings-ui/src/server/: mod.rs  settings.rs
my-settings-ui/src/server/app_ctx/: app_ctx.rs  mod.rs  ssh_private_key_resolver.rs
my-settings-ui/src/server/cf_http_client/: create_a_record.rs  delete_dns_record.rs  dns_record.rs  get_dns_records.rs  get_lb_ip.rs  mod.rs
my-settings-ui/src/server/grpc_client/: mod.rs  secrets_grpc_client.rs  templates_grpc_client.rs
my-settings-ui/src/server/nginx_http_client/: get_list_of_configurations.rs  mod.rs  save_nginx_configuration.rs
my-settings-ui/src/states/: cloud_flare_records_state.rs  filter_secret_state.rs  filter_template_state.rs  main_state.rs  mod.rs
my-settings-ui/src/storage/: last_used_product.rs  mod.rs  selected_env.rs
my-settings-ui/src/views/: domains_list.rs  envs_selector.rs  left_panel.rs  mod.rs  prompt_ssh_pass_key.rs  right_panel.rs
my-settings-ui/src/views/secrets_page/: mod.rs  render.rs  state.rs
my-settings-ui/src/views/templates_page/: render.rs  state.rs
proto/: DomainsService.proto  SecretsService.proto  TemplatesService.proto
proto-files/: TemplatesService.proto
settings-service/: Cargo.toml  Dockerfile  build.rs  gulpfile.js  package-lock.json
settings-service/Typescript/: Actions.ts  AppContext.ts  Dialog.ts  HtmlStaticElement.ts  Utils.ts
settings-service/Typescript/dialogs/: ConfirmDeleteTemplate.ts  EditTemplate.ts
settings-service/proto/: TemplatesService.proto
settings-service/src/: consts.rs  key_value_repository.rs  main.rs  secret_generator.rs  settings.rs
settings-service/src/app_ctx/: app_ctx.rs
settings-service/src/caches/: mod.rs
settings-service/src/flows/: compile_yaml.rs  delete_template.rs  get_all_secrets.rs  get_secret.rs  get_secrets_used_by_the_secret.rs  get_templates_used_by_the_secret.rs  mod.rs  save_secret.rs
settings-service/src/grpc_server/: mod.rs  secrets_grpc_service.rs  templates_grpc_service.rs
settings-service/src/http_server/: build_controllers.rs  mod.rs  settings_middleware.rs  (+1 more)
src/: app_ctx.rs  encryption.rs  env_settings.rs  key_value_repository.rs  main.rs  secret_generator.rs  settings.rs  settings_model.rs
src/app_ctx/: app_ctx.rs  mod.rs  secrets_value_reader.rs
src/caches/: last_request_time.rs  mod.rs  secret_values_cache.rs  secrets_cache.rs  secrets_values_cache.rs  templates_cache.rs
src/flows/: compile_yaml.rs  delete_domain_product_info.rs  delete_secret.rs  export_snapshot.rs  get_all_secrets.rs  get_all_templates.rs  get_domains.rs  get_secret.rs  get_secret_usage_in_secrets.rs  get_secrets_used_by_the_secret.rs  get_templates_used_by_the_secret.rs  get_used_secret_amount_by_template.rs  import_snapshot.rs  init_on_start.rs  initialize_templates.rs  mod.rs  save_secret.rs  save_template.rs  set_domain_mask.rs
src/grpc_server/: domains.rs  mappers.rs  mod.rs  secrets.rs  server.rs  templates.rs
src/http/: build_controllers.rs  settings_middleware.rs  start.rs
src/http_server/: build_controllers.rs  settings_middleware.rs  start.rs
src/mappers/: to_secret_grpc_model.rs
src/models/: content.rs  mod.rs  secret_item.rs  secret_usage.rs  secret_value.rs  template.rs
src/my_no_sql/: domain_my_no_sql_entity.rs  mod.rs  secret_my_no_sql_entity.rs  template_my_no_sql_entity.rs
src/operations/: delete_secret.rs  export_snapshot.rs  export_to_zip.rs  get_all_secrets.rs  get_all_templates.rs  get_domains.rs  get_populated_secret.rs  get_secret_usage_in_secrets.rs  get_secret_usage_in_templates.rs  import_snapshot.rs  initialize_templates.rs  mod.rs  populate_secrets_recursively.rs  populate_with_secrets.rs  secrets.rs  secrets_values.rs  set_domain_mask.rs  set_domain_product_info.rs  show_populated_secret.rs  show_secret_usage.rs  templates.rs  update_secret.rs
src/persistence/: secrets.rs  templates.rs
src/scripts/: init.rs  mod.rs  populate_secrets.rs  populate_secrets_recursively.rs  populate_with_secrets.rs
wwwroot/css/: site.css
wwwroot/js/: Actions.js  Actions.js.map  AppContext.js  AppContext.js.map  Dialog.js  Dialog.js.map  HtmlMain.js  HtmlMain.js.map  HtmlStaticElement.js.map  Utils.js  Utils.js.map  app.js  main.js  main.js.map
(+135 files in other folders)
