[package]
name = "settings-service"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
] }

my-http-server-controllers = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

my-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-logger.git" }

my-no-sql-macros = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-no-sql-macros.git" }
my-no-sql-data-writer = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-no-sql-data-writer.git" }
my-no-sql-server-abstractions = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-no-sql-server-abstractions.git" }

flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git" }
my-azure-key-vault = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-azure-key-valut.git" }
encryption = { tag = "0.1.0", git = "https://github.com/MyJetTools/encryption.git" }

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
prost = "*"
prost-types = "*"
anyhow = "*"
serde = "*"
serde_yaml = "*"
serde_derive = "*"
futures-core = "*"
tokio-postgres = { version = "*", features = ["with-chrono-0_4"] }
async-trait = "*"
uuid = { version = "*", features = ["serde", "v4"] }
libaes = "*"
base64 = "*"
serde_json = "*"


[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
