[package]
name = "settings-service"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.7.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
    "controllers",
    "macros",
] }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "base64",
    "placeholders",
] }

my-no-sql-sdk = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-no-sql-sdk.git", features = [
    "data-writer",
    "macros",
] }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }

my-grpc-extensions = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }

flurl = { tag = "0.5.0", git = "https://github.com/MyJetTools/fl-url.git" }
my-settings-reader = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-settings-reader.git" }
my-azure-key-vault = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-azure-key-valut.git" }
encryption = { tag = "0.1.0", git = "https://github.com/MyJetTools/encryption.git" }

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
prost = "*"
prost-types = "*"
anyhow = "*"
serde = "*"
serde_yaml = "*"
serde_derive = "*"
futures-core = "*"
async-trait = "*"
uuid = { version = "*", features = ["serde", "v4"] }
libaes = "*"
base64 = "*"
serde_json = "*"
rand = "*"
zip = "*"

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
