[package]
name = "settings-service"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.8.3", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
    "controllers",
    "macros",
] }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "base64",
] }

my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }

my-grpc-extensions = { tag = "0.6.6", git = "https://github.com/MyJetTools/my-grpc-extensions.git", features = [
    "grpc-server",
] }
rust-common = { tag = "0.1.1", git = "https://github.com/MyJetTools/rust-common.git", features = [
    "placeholders",
] }

flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git" }
my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }
encryption = { tag = "0.1.1", git = "https://github.com/MyJetTools/encryption.git" }

tonic = { version = "*" }
tonic-prost = "*"
prost = "*"

hyper = { version = "*" }
tokio = { version = "*" }
tokio-util = "*"

anyhow = "*"
serde = "*"
serde_yaml = "*"
serde_derive = "*"
futures-core = "*"
async-trait = "*"
uuid = { version = "*", features = ["serde", "v4"] }
libaes = "*"
base64 = "*"
serde_json = "*"
rand = "*"
zip = "*"

[build-dependencies]
tonic-prost-build = { version = "*" }
