[package]
name = "my-settings-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
server = [
    "dioxus/server",
    "my-logger",
    "my-grpc-extensions",
    "tokio",
    "tonic",
    "tonic-prost",
    "async-trait",
    "anyhow",
    "prost",
    "prost-types",
    "futures",
    "lazy_static",
    "serde_yaml",
    "flurl",
    "my-ssh",
    "my-settings-reader",
    "dioxus-utils/server",
    "rust-extensions/base64",
]
web = ["dioxus/web"]

[dependencies]
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git", optional = true }

my-grpc-extensions = { tag = "0.6.6", git = "https://github.com/MyJetTools/my-grpc-extensions.git", features = [
    "grpc-client",
    "with-ssh",
], optional = true }


my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git", optional = true }

settings-utils = { tag = "0.1.2", git = "https://github.com/MyJetTools/settings-utils.git" }

dioxus = { version = "0.7", features = ["fullstack", "router"] }

dioxus-utils = { git = "https://github.com/MyJetTools/dioxus-utils.git", tag = "0.7.0", features = [
    "fullstack",

] }


rfd = "*"

my-ssh = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-ssh.git", optional = true }

serde = "*"
chrono = "*"

tokio = { version = "*", features = ["full"], optional = true }
serde_json = { version = "*" }
serde_yaml = { version = "*", optional = true }
futures = { version = "*", optional = true }
tonic = { version = "*", optional = true }
tonic-prost = { version = "*", optional = true }
anyhow = { version = "*", optional = true }
prost = { version = "*", optional = true }
prost-types = { version = "*", optional = true }
async-trait = { version = "*", optional = true }
lazy_static = { version = "*", optional = true }
flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git", optional = true }
base64 = { version = "*" }

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.3" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
